update a line for pca

--- a/red_wine_statistical_analysis.ipynb
+++ b/red_wine_statistical_analysis.ipynb
@@ -740,8 +740,8 @@
       "Dep. Variable:                quality   R-squared:                       0.361\n",
       "Model:                            OLS   Adj. R-squared:                  0.356\n",
       "Method:                 Least Squares   F-statistic:                     81.35\n",
-      "Date:                Thu, 13 May 2021   Prob (F-statistic):          1.79e-145\n",
-      "Time:                        21:30:01   Log-Likelihood:                -1569.1\n",
+      "Date:                Fri, 14 May 2021   Prob (F-statistic):          1.79e-145\n",
+      "Time:                        01:12:16   Log-Likelihood:                -1569.1\n",
       "No. Observations:                1599   AIC:                             3162.\n",
       "Df Residuals:                    1587   BIC:                             3227.\n",
       "Df Model:                          11                                         \n",
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a275b7cd",
+   "id": "e3116011",
    "metadata": {},
    "outputs": [
     {
@@ -1695,18 +1695,87 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4db4ff5b",
+   "id": "8264c231",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PC1 = (fixed acidity * 0.489314) + (volatile acidity * -0.238584) + … + (alcohol * -0.113232)"
+    "#PC1 = (fixed acidity * 0.489314) + (volatile acidity * -0.238584) + … + (alcohol * -0.113232)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "d8ecd4ff",
+   "execution_count": 41,
+   "id": "bc692431",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.52835961,  0.96187667, -1.39147228, -0.45321841, -0.24370669,\n",
+       "       -0.46619252, -0.37913269,  0.55827446,  1.28864292, -0.57920652,\n",
+       "       -0.96024611])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0] # first row after StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7cce7526",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.48931422, -0.23858436,  0.46363166,  0.14610715,  0.21224658,\n",
+       "       -0.03615752,  0.02357485,  0.39535301, -0.43851962,  0.24292133,\n",
+       "       -0.11323206])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca_fitted.components_[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1ccc2a02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.6195298795599413"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0].dot(pca_fitted.components_[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d8ecd4ff",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1730,64 +1799,34 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>PC1</th>\n",
-       "      <th>PC2</th>\n",
-       "      <th>PC3</th>\n",
-       "      <th>PC4</th>\n",
-       "      <th>PC5</th>\n",
-       "      <th>PC6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.619530</td>\n",
-       "      <td>0.450950</td>\n",
-       "      <td>-1.774454</td>\n",
-       "      <td>0.043740</td>\n",
-       "      <td>0.067014</td>\n",
-       "      <td>-0.913921</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.799170</td>\n",
-       "      <td>1.856553</td>\n",
-       "      <td>-0.911690</td>\n",
-       "      <td>0.548066</td>\n",
-       "      <td>-0.018392</td>\n",
-       "      <td>0.929714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.748479</td>\n",
-       "      <td>0.882039</td>\n",
-       "      <td>-1.171394</td>\n",
-       "      <td>0.411021</td>\n",
-       "      <td>-0.043531</td>\n",
-       "      <td>0.401473</td>\n",
+       "      <td>-1.61953</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        PC1       PC2       PC3       PC4       PC5       PC6\n",
-       "0 -1.619530  0.450950 -1.774454  0.043740  0.067014 -0.913921\n",
-       "1 -0.799170  1.856553 -0.911690  0.548066 -0.018392  0.929714\n",
-       "2 -0.748479  0.882039 -1.171394  0.411021 -0.043531  0.401473"
+       "       PC1\n",
+       "0 -1.61953"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(X_pca[:,:6], columns=list(['PC1', 'PC2', 'PC3', 'PC4', 'PC5', 'PC6'])).head(3)"
+    "pd.DataFrame(pd.DataFrame(X_pca[:,:6], columns=list(['PC1', 'PC2', 'PC3', 'PC4', 'PC5', 'PC6'])).head(1)['PC1'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "id": "f445b276",
    "metadata": {},
    "outputs": [
@@ -1929,7 +1968,7 @@
        "9  0.654790  1.665207  1.209476 -0.824635  1.718501 -0.476497"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1940,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "3bbefed4",
    "metadata": {},
    "outputs": [],
@@ -1958,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "cedd2b8b",
    "metadata": {},
    "outputs": [
@@ -1968,7 +2007,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1999,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "4b327843",
    "metadata": {},
    "outputs": [],
@@ -2022,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "226780e8",
    "metadata": {},
    "outputs": [
@@ -2035,8 +2074,8 @@
       "Dep. Variable:                quality   R-squared:                       0.361\n",
       "Model:                            OLS   Adj. R-squared:                  0.356\n",
       "Method:                 Least Squares   F-statistic:                     81.35\n",
-      "Date:                Thu, 13 May 2021   Prob (F-statistic):          1.79e-145\n",
-      "Time:                        21:30:05   Log-Likelihood:                -1569.1\n",
+      "Date:                Fri, 14 May 2021   Prob (F-statistic):          1.79e-145\n",
+      "Time:                        01:12:20   Log-Likelihood:                -1569.1\n",
       "No. Observations:                1599   AIC:                             3162.\n",
       "Df Residuals:                    1587   BIC:                             3227.\n",
       "Df Model:                          11                                         \n",
@@ -2086,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "2cf4d7ab",
    "metadata": {},
    "outputs": [],
@@ -2097,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "cf6ae46b",
    "metadata": {},
    "outputs": [],
@@ -2120,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "35cd0690",
    "metadata": {},
    "outputs": [],
@@ -2130,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "id": "4a8a94c2",
    "metadata": {},
    "outputs": [],
@@ -2141,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "933d1244",
    "metadata": {},
    "outputs": [
@@ -2175,17 +2214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "id": "276eb5ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 6 components"
+    "## 6 pca components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "id": "9f4d3041",
    "metadata": {},
    "outputs": [
@@ -2195,7 +2234,7 @@
        "(1599, 11)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2206,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "id": "35e4d34b",
    "metadata": {},
    "outputs": [
@@ -2216,7 +2255,7 @@
        "(1599, 6)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "33d32668",
    "metadata": {},
    "outputs": [],
@@ -2237,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "id": "f9736835",
    "metadata": {},
    "outputs": [
@@ -2280,7 +2319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eddec386",
+   "id": "24b1f905",
    "metadata": {},
    "outputs": [],
    "source": []
